Use media queries for about page + fix overflow

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -16,10 +16,21 @@ div.crabs-wrapper {
     -webkit-transform: scaleX(-1);
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 1110px) {
     h1 {
         margin: 0;
         padding: 0;
+    }
+
+    .crabs-wrapper > * {
+        object-fit: cover;
+        width: 50%;
+        height: 200px;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    h1 {
         font-size: 25pt;
     }
 
@@ -28,9 +39,7 @@ div.crabs-wrapper {
     }
 
     .crabs-wrapper .img-one {
-        object-fit: cover;
         width: 100vw;
-        height: 200px;
         transform: scale(1.1);
     }
 
